switch to chartjs CDN
[skip ci]

--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -363,7 +363,7 @@
 {{ block.super }}
 <script src="//fast.fonts.com/jsapi/e86344be-530a-495b-be28-7a22a9cda219.js"></script>
 <script src='{% static "js/lighterprints/model.js" %}'></script>
-<script src='{% static "js/Chart.min.js" %}'></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js'></script>
 {% include "includes/bootstrap-tour.html" %}
 <script>
 $(function() {
