--- a/vcweb/core/templates/experimenter/subject-pool-index.html
+++ b/vcweb/core/templates/experimenter/subject-pool-index.html
@@ -333,8 +333,8 @@
                     );
                 };
 
-                model.saveSession = function(session, event) {
-                    if(+new Date(session.start_date()) >= +new Date(session.end_date())){
+                model.saveSession = function(session, event) { 
+                    if(+moment(session.start_date()).toDate() >= +moment(session.end_date()).toDate()){
                         bootbox.alert(
                             "ERROR: End date cannot be earlier than or same as the start date. Please choose a later end date.",
                             function() {}
@@ -441,7 +441,7 @@
 
                 self.selected = ko.observable(false); 
                 self.active = ko.computed( function() {
-                    return (self.pk() == -1 || ( +new Date(self.end_date()) >= +new Date()));
+                    return (self.pk() == -1 || ( +moment(self.end_date()).toDate() >= +moment().toDate()));
                 });
                 self.makeEditable = function () {
                     self.isEditable(true);
