--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -24,8 +24,7 @@
             <div style='display:none;' data-bind='visible: completed'>
                 <div class='alert alert-block alert-white'>
                     <i class='text-gold fa fa-trophy'></i>
-                    <span data-bind='ifnot: hasScheduledActivities'>Congratulations! Your group has completed level 3 and finished the experiment.</span>
-                    <span data-bind='if: hasScheduledActivities'>Congratulations! Your group has successfully met your carbon footprint goal for today.</span>
+                    Congratulations! Your group has successfully met your carbon footprint goal for today.
                 </div>
             </div>
             <div style='display: none;' data-bind='visible: ! completed()'>
@@ -34,7 +33,8 @@
                 <h2 class='welcome-header lighterprints-dark-gray'>Welcome to Lighter Footprints, <i class='lighterprints-blue'><span data-bind='text: groupName'></span>!</i></h2>
                 <p>
                     You have been randomly placed in a group of {{ participant_group_relationship.group.size }}
-                    participants. In this experiment you can perform virtual actions that represent green alternatives
+                    participants.
+                    In this experiment you can perform virtual actions that represent green alternatives
                     to some common daily activities.
                 </p>
                 <p>
@@ -42,17 +42,19 @@
                     performing challenges.
                     <span data-bind='if: linearPublicGood'>
                         You will earn <b class='lighterprints-green'><i class='fa fa-usd'></i>0.02</b> for each point in
+                        {% if treatment_type == "COMMUNITY" %}
+                        your Community score.
+                        {% else %}
                         your Group Score.
+                        {% endif %}
                     </span>
-                    <span data-bind='if: hasScheduledActivities && ! linearPublicGood'>
+                    <span data-bind='if: ! linearPublicGood'>
                         Your goal is to have your <b>group's average points per person</b>, shown in the <b>Group Score
                         box</b>, reach <span data-bind='text: pointsToNextLevel'></span>.
                     </span>
-                    <span data-bind='ifnot: hasScheduledActivities'>Rank up by <b>increasing your group's score, shown in the Group Score box.</b></span>
                 </p>
                 <p>
                     <i class='fa fa-star text-gold'></i> Some challenges are unlocked all day, and others are only unlocked at specific times.
-                    <span data-bind='ifnot: hasScheduledActivities'>Discover new challenges by ranking up!</span>
                 </p>
                 <p>
                 <strong><i class='fa fa-warning text-error'></i> Your group score resets at midnight every day.</strong>
@@ -83,7 +85,7 @@
                 </div>
                 <div class='col-md-3 left-divider'>
                     <h5 id='third-box'><span data-bind='text: thirdBoxTitle' class='lighterprints-scoreboard-uppercase'></span></h5>
-                    <table style='margin-top: -37px;' data-bind='if: hasScheduledActivities'>
+                    <table style='margin-top: -37px;'>
                         <tr data-bind='if: linearPublicGood'>
                             <td><i class='lighterprints-green fa fa-usd fa-3x'></i></td>
                             <td class='lighterprints-scoreboard-xlarge lighterprints-green'><span data-bind='text: totalDailyEarnings'></span></td>
@@ -93,14 +95,6 @@
                             <td><i class='lighterprints-green fa fa-leaf fa-2x'></i></td>
                         </tr>
                     </table>
-                    <div class='dashboard-content' data-bind='ifnot: hasScheduledActivities'>
-                        <div data-bind='if: completed'>
-                            <img alt='Experiment Completed' class='group-level' width='120' height='70' src='{% static "images/lighterprints/experiment-completed.png"%}'>
-                        </div>
-                        <div data-bind='ifnot: completed'>
-                            <img alt='Group Level' class='group-level' width="104" height="65" data-bind="attr: { src: '{% static "images/lighterprints/rank"%}' + groupLevel() + '.png' }">
-                        </div>
-                    </div>
                 </div>
                 <div class='col-md-3 left-divider'>
                     <h5 id='time-remaining'><span class='lighterprints-scoreboard-uppercase'>Time Remaining</span></h5>
@@ -137,8 +131,8 @@
             <h1 class='header'><i class='fa fa-star'></i> Challenges</h1>
             <div class='alert alert-block alert-white'>
                 <h2>Complete challenges to earn green points.</h2>
-                <p data-bind='if: hasScheduledActivities'>
-                    Different challenges are available at different times and days. 
+                <p>
+                    Different challenges are available at different times and days.
                     <span data-bind='if: linearPublicGood'>You will earn <b><i class='fa fa-usd'></i>0.02</b> for each
                         point in your group average score. For example, if your group average score is <b>123</b> by the
                         end of today you would have earned <b><i class='fa fa-usd'></i>2.46</b>.
@@ -147,11 +141,6 @@
                         winning a prize, your group must earn enough points so that the <strong>average number of points</strong> per participant is greater than
                         <span data-bind='text:pointsToNextLevel' class='badge badge-lighterprints-green'></span>.
                     </span>
-                </p>
-                <p data-bind='ifnot: hasScheduledActivities'>
-                Challenges are divided up into 3 levels.  In order to unlock the next level's challenges your group must earn
-                enough points so that the <strong>average number of points</strong> per participant is greater than
-                <span data-bind='text:pointsToNextLevel' class='badge badge-lighterprints-green'></span>.
                 </p>
                 <p>
                 <i class='fa fa-clock-o'></i> Some challenges are available all day, and others are only available at <strong>certain hours</strong>.
@@ -176,7 +165,6 @@
             In order to perform this challenge you must login to the application between 12pm and 2pm, 
             select the challenge from the list below, and click the &quot;Perform&quot; button.
             </p>
-            <p data-bind='if: hasScheduledActivities'>
             <div data-bind='if: linearPublicGood'>
                 You will earn <b class='lighterprints-green'><i class='fa fa-usd'></i>0.02</b> for each point in your group average score, so if your group average score is <b>150</b> by the end of the day you would have earned 
                 <b class='lighterprints-green'><i class='fa fa-usd'></i>3.00</b> for that day.
@@ -186,15 +174,6 @@
                 <i class='fa fa-leaf'></i></strong>. In order to reach this target you and a majority of the members of your group will need to perform high point challenges when they are available.
             </div>
             <b>Different challenges will be available on different days, so check back each day to see which challenges are available</b>
-            </p>
-            <p data-bind='ifnot: hasScheduledActivities'>
-            Your group is currently <strong class='text-gold'>Level <span data-bind='text:groupLevel'></span></strong> and has an average score of 
-            <strong class='lighterprints-green'><span data-bind='text:averagePoints'></span> <i class='fa fa-leaf'></i></strong>.  In order to
-            advance in level and unlock more challenges the <em>average number of points contributed by each member of your group</em> must be equal to or greater than 
-            <strong class='lighterprints-green'><span data-bind='text: pointsToNextLevel'></span> <i class='fa fa-leaf'></i></strong>.
-            In order to reach this target you and a majority of the members of your group must perform
-            high point challenges when they are available.
-            </p>
             <h3>How to participate</h3>
             <p>
             To participate, simply click on the <a href='#challenges' data-bind='click: activateChallengesTab'>Challenges tab</a>, and select a challenge you'd like to perform.
@@ -211,19 +190,6 @@
                 people in your group, performing a 15 point activity adds 3 points to the group average (15 / 5 = 3).
                 </p>
             </div>
-            <div data-bind='ifnot: hasScheduledActivities'>
-            <div class='well alert-white'>
-                <h4>Why do the challenges performed in the previous day not count for today?</h4>
-                <p>
-                In order to advance in level and unlock more challenges you must reach an average level of points in your
-                group during one day, starting at 12:00 AM. Every day at midnight the server will check your group's
-                average number of points and determine whether or not you should move on to the next level. If your
-                group advances in level your group will once again start at 0 points with the additional unlocked
-                challenges for that level available to perform. If your group did not reach the next level, your group
-                will start with 0 points at the same level with the same challenges available as the previous day.
-                </p>
-            </div>
-        </div>
             <div class='well alert-white'>
                 <h4>I don't have a car or anyone to carpool with, so how can I carpool?</h4>
                 <p>
@@ -366,95 +332,86 @@
 <script src='//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js'></script>
 {% include "includes/bootstrap-tour.html" %}
 <script>
+var vm;
 $(function() {
     // set up KO binding, using one master view model
-    var viewModelData = $.parseJSON("{{ view_model_json|escapejs }}");
-    var viewModel = new LighterFootprintsModel(viewModelData);
+    var viewModel = new LighterFootprintsModel($.parseJSON("{{ view_model_json|escapejs }}"));
     // custom view model methods, some of these may be lifted into the model itself
-    viewModel.tutorialTour = new Tour({ name: "lfpTutorial", labels: { end: "End tutorial", next: 'Next »', prev: '« Back' }});
-    viewModel.progressChart = ko.observable(new Chart(document.getElementById("progressChart").getContext("2d")));
-    {% comment %}
-    // FIXME: crappy special case logic to deal with scheduled activities vs level based activities and linear public
-    good parameter
-    {% endcomment %}
     viewModel.thirdBoxTitle = ko.computed(function() {
-        if (viewModel.hasScheduledActivities()) {
-            if (viewModel.linearPublicGood()) {
-                return "Today's Earnings";
-            }
-            else {
-                return "Your Score";
-            }
+        if (viewModel.linearPublicGood()) {
+            return "Today's Earnings";
         }
         else {
-            return "Current Level";
+            return "Your Score";
         }
     });
     viewModel.thirdBoxTooltipContent = ko.computed(function() {
-        var thirdBoxContent = "This is your group's current level. Each new level unlocks 5 new challenges.";
-        if (viewModel.hasScheduledActivities()) {
-            if (viewModel.linearPublicGood()) {
-                thirdBoxContent = "This shows the number of points you have contributed to your group today and your total earnings for the day.";
-            }
-            else {
-                thirdBoxContent = "This shows the total number of points you have contributed to your group today.";
-            }
+        if (viewModel.linearPublicGood()) {
+            return "This shows the number of points you have contributed to your group today and your total earnings for the day.";
         }
-        return thirdBoxContent;
+        else {
+            return "This shows the total number of points you have contributed to your group today.";
+        }
     });
+    viewModel.tutorialTour = ko.observable();
+    viewModel.progressChart = ko.observable(new Chart(document.getElementById("progressChart").getContext("2d")));
     viewModel.setup = function() {
         viewModel.initializeChart();
         viewModel.setupTour();
     };
     viewModel.endTour = function() {
-        var tour = viewModel.tutorialTour;
+        var tour = viewModel.tutorialTour();
         if (tour.ended()) {
             return;
         }
-        console.debug("ending tour");
         tour.end();
     };
-
-
     viewModel.setupTour = function() {
-        var tour = viewModel.tutorialTour;
-        tour.addSteps([
-        {
-            element: "#progress",
-            placement: "top",
-            title: "Progress",
-            content: "This chart shows your current group score (blue) and your group score goal (gray)."
-        },
-        {
-            element: "#group-score",
-            title: "Group Score",
-            placement: "top",
-            content: "This is your group score for the day. The group score is the average number of points each member of your group has earned, starting at midnight each day."
-        },
-        {
-            element: "#third-box",
-            title: viewModel.thirdBoxTitle(),
-            placement: "top",
-            content: viewModel.thirdBoxTooltipContent()
-        },
-        {
-            element: "#time-remaining",
-            placement: "top",
-            title: "Time Remaining",
-            content: "The time remaining before your group progress resets at midnight."
-        },
-        {
-            element: "#unlocked-challenge-tab",
-            title: "Perform Challenges",
-            content: "Perform challenges by clicking on the green Perform button. The points each challenge is worth is listed on the right."
-        }]);
-        if (viewModel.firstVisit()) {
-            tour.start(true);
+        if (! viewModel.firstVisit()) {
+            return;
         }
+        var tour = new Tour({
+            name: "lfpTutorial",
+            steps: [
+                {
+                    element: "#progress",
+                    placement: "top",
+                    title: "Progress",
+                    content: "This chart shows your current group score (blue) and your group score goal (gray)."
+                },
+                {
+                    element: "#group-score",
+                    title: "Group Score",
+                    placement: "top",
+                    content: "This is your group score for the day. The group score is the average number of points each member of your group has earned, starting at midnight each day."
+                },
+                {
+                    element: "#third-box",
+                    title: viewModel.thirdBoxTitle(),
+                    placement: "top",
+                    content: viewModel.thirdBoxTooltipContent()
+                },
+                {
+                    element: "#time-remaining",
+                    placement: "top",
+                    title: "Time Remaining",
+                    content: "The time remaining before your group progress resets at midnight."
+                },
+                {
+                    element: "#unlocked-challenge-tab",
+                    title: "Perform Challenges",
+                    content: "Perform challenges by clicking on the green Perform button. The points each challenge is worth is listed on the right."
+                }
+            ]
+        });
+        viewModel.tutorialTour(tour);
+        tour.init();
+        tour.start(true);
+        console.debug("setup tour");
     };
     viewModel.restartTour = function() {
         viewModel.activateDashboardTab();
-        viewModel.tutorialTour.restart();
+        viewModel.tutorialTour().restart();
     };
     viewModel.progressChartData = ko.computed(function() {
         var avgPoints = Math.max(1, viewModel.averagePoints());
@@ -512,6 +469,7 @@ $(function() {
             }
         });
     };
+    vm = viewModel;
     ko.applyBindings(viewModel);
     viewModel.setup();
     // FIXME: more efficient way to select these?
